# systrix

./: .gitignore  ACCEPTANCE_CRITERIA.md  AFTER_BUILD_GUIDE.md  ARCHITECTURE.md  BATTERY_FEATURE_SUMMARY.md  BATTERY_MONITORING.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEBUG_BATTERY.md  DELIVERABLES.md  DEVICE_NAME_FEATURE.md  EXAMPLES.md  EXPORT_FEATURE_GUIDE.md  EXPORT_FORMAT_MODAL.md  EXPORT_LOCATION_UPDATE.md  FINAL_SUMMARY.md  FIX_SETTINGS_NAVIGATION.md  GITHUB_SETUP.md  HTML_EXPORT_GUIDE.md  INSTALLATION.md  KILL_PROCESS_GUIDE.md  LICENSE  MODAL_FIX.md  PLATFORM_NOTES.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  RUNNING.md  SETTINGS_PANEL_GUIDE.md  SUCCESS.md  TEST_EXPORT_MODAL.md  TEST_NAVIGATION_FIX.md  V0.3.0_EXPORT_MODAL_COMPLETE.md  V0.3.0_HTML_EXPORT_COMPLETE.md  V0.3.0_PHASE1_COMPLETE.md  V0.4.0_RELEASE.md  (+5 more)
.github/workflows/: ci.yml
assets/: export_script.js  export_style.css
config/: default.toml
src/: app.rs  cli.rs  export.rs  lib.rs  main.rs  plugins.rs  remote_agent.rs  utils.rs
src/monitor/: battery.rs  cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs
src/tui/: event.rs  mod.rs  ui.rs
src/tui/panels/: disk.rs  gpu.rs  mod.rs  network.rs  overview.rs  processes.rs  settings.rs
tests/: cli_tests.rs  monitor_tests.rs
