[package]
name = "systrix"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["Systrix Contributors"]
description = "System Monitor Terminal App - CLI + TUI for monitoring system resources"
license = "MIT"
repository = "https://github.com/Kazeku-06/systrix"
keywords = ["system", "monitor", "tui", "cli", "performance"]
categories = ["command-line-utilities"]

[lib]
name = "systrix"
path = "src/lib.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "cargo"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# System monitoring
sysinfo = "0.30"

# TUI (optional feature)
ratatui = { version = "0.25", optional = true }
crossterm = { version = "0.27", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GPU support (optional)
nvml-wrapper = { version = "0.9", optional = true }

# Remote agent (optional)
axum = { version = "0.7", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

# Dynamic plugins (optional)
libloading = { version = "0.8", optional = true }

# Utilities
chrono = "0.4"
humantime = "2.1"
byte-unit = "5.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[features]
default = ["tui"]
tui = ["ratatui", "crossterm"]
gpu = ["nvml-wrapper"]
remote = ["axum", "tokio-tungstenite", "tower-http"]
dynamic-plugins = ["libloading"]

[[bin]]
name = "systrix"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
